# 2010KATIBA-GPT

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
db/chroma_db/: chroma.sqlite3
