[tool.poetry]
name = "2010katibba-gpt"
version = "1"
description = "Chat with the 2010 Constitution of Kenya"
authors = ["WALTEROBILA <aderobila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.13"
langchain-anthropic = "^0.3.1"
langchain-google-genai = "^2.0.7"
langchain-google-firestore = "^0.5.0"
chromadb = "^0.5.23"
langchainhub = "^0.1.21"
pypdf = "^5.1.0"
sentence_transformers = "^3.3.1"
langchain_huggingface = "^0.1.2"
huggingface_hub = "^0.27.0"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"